src/blocks/Quotes/quotes.module.css
.quotes {
  margin: 92px 0 300px;
  width: 85%;
  padding: 104px 0 104px 52px;
  background-color: var(--pink);
}

@media all and (max-width: 989px) {
  .quotes {
    margin: 40px 0 80px 0;
    width: 100%;
    padding: 40px;
  }
}

.quotes-gallery {
  width: 100%;
  height: 100%;
  position: relative;
  display: flex;
  justify-content: flex-start;
  gap: 56px;

  h2 {
    font-family: var(--ap);
    font-size: 45px;
    line-height: 60px;
    margin-bottom: 84px;
  }

  h5 {
    font-family: var(--ap);
    line-height: 21px;
    font-size: 22px;
  }

  .content {
    width: 75%;
    color: var(--secondary-color);
  }

  .controls {
    position: absolute;
    right: 0;
    width: 40px;
    margin-left: 56px;
  }

  .controls button {
    height: 56px;
    width: 56px;
    background-color: transparent;
    &:nth-of-type(2) {
      margin-top: 14px;
    }
  }

  @media all and (max-width: 989px) {
    display: block;

    .content {
      width: 100%;
      padding: 50px 24px 0 0;
    }

    .controls {
      bottom: -20px;
      margin-left: 0;
    }

    h2 {
      font-size: 24px;
      line-height: 32px;
    }
  }
}

